--- a/tutorial/bg_info/tutorial_julesrose/jr_developer.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_developer.html
@@ -59,18 +59,20 @@
                                 <li><a href="user_quiz.html">User Quiz</a></li>
 
                                 <li><a href="developer_quiz.html">Developer Quiz</a></li>
-                                <li><a href="developer advanced_quiz.html">Developer Advanced Quiz</a></li>
+                                <li><a href="developer_advanced_quiz.html">Developer Advanced Quiz</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Tutorials and practical's</li>
                                 <li><a href="jr_user.html">User</a></li>
-                                <li><a href="jr_developer advanced.html">Developer Advanced</a></li>
+                                <li><a href="jr_developer_advanced.html">Developer Advanced</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
-                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
+                                <li><a href="jr_vm_setup.html">JULES VM setup</a></li>
+                                <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -202,7 +204,7 @@ These changes have to be justified usually with plots and approved by the code o
            <br/>please insert the most recent version number.
            <br/><code>bc</code> - means <code>branch-create</code>
            <br/>"tutorial_bc_rosestem" will be the name of the branch.</p>
-           <p>If you do not have keywords set-up you will have to use the URL:
+           <p>If you do not have keywords setup you will have to use the URL:
            <code>fcm bc tutorial_bc_rosestem https://code.metoffice.gov.uk/svn/jules/main/trunk@vn4.8</code></p>
            <p>This will bring up a text editor window for you to add your
               commit message about the branch.</p>
@@ -1002,7 +1004,7 @@ read_list=.true.
                be false and 1 x 1.
                u-ai828 (or u-ai829 for VM or u-ai843 for JASMIN, or u-ai844
                for remote JASMIN from your desktop) with the metadata specified
-               has this set-up.</p>
+               has this setup.</p>
             <img src="images/rose_edit_dom1.png" width="80%" id="red1"/>
             <br/>
             <br/>
@@ -1014,7 +1016,7 @@ read_list=.true.
                the name of the land fraction data.
                <code>Model grid</code> has the sub grid set to true and the
                boundaries to the lat and long of the domain.
-               To see an example with the second type of set-up see the 
+               To see an example with the second type of setup see the 
                JULES-Rose suite u-ai509 with the metatdata specified as above.</p>
             <img src="images/rose_edit_dom2.png" width="80%" id="red2"/>
             <br/>
@@ -2057,7 +2059,7 @@ url=http://jules-lsm.github.io/vn4.7/namelists/jules_snow.nml.html#JULES_SNOW::g
                check the metadata.</p>
             <br/>
             <p>After changing the metadata in anyway or adding a new rose stem test (see 
-               <a href="jr_developer advanced.html">Developer Advanced Tutorial</a>)
+               <a href="jr_developer_advanced.html">Developer Advanced Tutorial</a>)
 <pre>
 rose macro --fix -M /path/to/the/metadata/for/testing/
 </pre>
@@ -2132,8 +2134,8 @@ create-rose-app vn4.4 vn4.8 /path/to/my/4.4/namelist/ my_4p4_conversion /path/to
             <br/>
             <p>For more on Rose Upgrade and Upgrade Macros please see:
                <a href="http://metomi.github.io/rose/doc/rose.html">Rose Documentation</a>.</p>
-             <p> <a href="http://metomi.github.io/rose/doc/rose-rug-developer advanced-tutorials-upgrade-usage.html">Upgrading</a>.</p>
-             <p> <a href="http://metomi.github.io/rose/doc/rose-rug-developer advanced-tutorials-upgrade-dev.html">Upgrade Macro Development</a>.</p>
+             <p> <a href="http://metomi.github.io/rose/doc/rose-rug-advanced-tutorials-upgrade-usage.html">Upgrading</a>.</p>
+             <p> <a href="http://metomi.github.io/rose/doc/rose-rug-advanced-tutorials-upgrade-dev.html">Upgrade Macro Development</a>.</p>
             <br/>
 
             </div>
