--- a/tutorial/bg_info/tutorial_julesrose/user_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/user_quiz.html
@@ -43,19 +43,21 @@
 
                                 <li><a href="precourse_quiz.html">Pre-course Quiz</a></li>
                                 <li><a href="developer_quiz.html">Developer Quiz</a></li>
-                                <li><a href="developer advanced_quiz.html">Developer Advanced Quiz</a></li>
+                                <li><a href="developer_advanced_quiz.html">Developer Advanced Quiz</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Tutorials and practical's</li>
                                 <li><a href="jr_user.html">User</a></li>
                                 <li><a href="jr_developer.html">Developer</a></li>
-                                <li><a href="jr_developer advanced.html">Developer Advanced</a></li>
+                                <li><a href="jr_developer_advanced.html">Developer Advanced</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
-                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
+                                <li><a href="jr_vm_setup.html">JULES VM setup</a></li>
+                                <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -325,7 +327,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="question">How can we look at JULES Rose-suite or JULES rose stem job output/errors?</p>
+                                <p class="question">How can we look at JULES Rose-suite job output/errors?</p>
                                 <div id="20" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">gcylc GUI, right click on the task, View, job.*</label><br/></li>
@@ -340,7 +342,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="question">How can we look at JULES Rose-suite or JULES rose stem output?</p>
+                                <p class="question">How can we look at JULES Rose-suite output?</p>
                                 <div id="21" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">gcylc GUI, right click on the task, View, job.*</label><br/></li>
@@ -367,20 +369,8 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="question">What is JULES rose stem?</p>
-                                <div id="23" class="questions">
-                                    <ol type="A">
-                                        <li><input type="radio" value="A" /><label for="A">A testing system for JULES code to check that new science or tech changes do not break existing code</label><br/></li>
-                                        <li><input type="radio" value="B" /><label for="B">A testing system for JULES code to check the UM</label><br/></li>
-                                        <li><input type="radio" value="C" /><label for="C">A testing system for JULES-Rose suites to test all suites ever</label><br/></li>
-                                        <li><input type="radio" value="D" /><label for="D">A testing system for JULES-Rose suites to test the UM</label><br/></li>
-                                    </ol>
-                                    <p class="answers A"><em>A</em></p>
-                                </div>
-                            </li>
-                            <li>
                                 <p class="question">What two repositories will you be using and needing for JULES only work?</p>
-                                <div id="24" class="questions">
+                                <div id="23" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">JULES code and JULES suites</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">JULES code and roses u suites</label><br/></li>
@@ -392,7 +382,7 @@
                             </li>
                             <li>
                                 <p class="question">What is MOSRS?</p>
-                                <div id="25" class="questions">
+                                <div id="24" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Met Office Stored Repository Service</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">Met Office Shared Repository Service</label><br/></li>
@@ -404,7 +394,7 @@
                             </li>
                             <li>
                                 <p class="question">What are FCM keywords?</p>
-                                <div id="26" class="questions">
+                                <div id="25" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Different repositories</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">Shortcuts/aliases for example fcm:jules.x_tr</label><br/></li>
@@ -416,7 +406,7 @@
                             </li>
                             <li>
                                 <p class="question">How can you find out what the FCM keywords for are on your system?</p>
-                                <div id="27" class="questions">
+                                <div id="26" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">fcm kp</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">fcm keywords-print</label><br/></li>
@@ -429,7 +419,7 @@
                             </li>
                             <li>
                                 <p class="question">What is FCM?</p>
-                                <div id="28" class="questions">
+                                <div id="27" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">A private GitHub user friendly interface to subversion control</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">An open source GitHub user friendly interface to subversion control</label><br/></li>
@@ -440,7 +430,7 @@
                                 </div>
                             </li>
                             <li>                                <p class="question">Why use FCM?</p>
-                                <div id="29" class="questions">
+                                <div id="28" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">It deletes old files and replaces them and provides version control</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">It saves the whole repository every time and provides version control</label><br/></li>
@@ -451,7 +441,7 @@
                                 </div>
                             </li>
                             <li>                                <p class="question">How can you get a copy of the JULES code?</p>
-                                <div id="30" class="questions">
+                                <div id="29" class="questions">
                                     <ol type="A">                                                                  <li><input type="radio" value="A" />fcm ci fcm:jules.x_tr@vn#.# or fcm ci https://code.metoffice.gov.uk/svn/jules/main/trunk@vn#.#<label for="A"></label><br/></li>
                                         <li><input type="radio" value="B" />fcm co fcm:jules.x_tr@vn#.# or fcm co https://code.metoffice.gov.uk/svn/jules/main/trunk@vn#.#<label for="B"></label><br/></li>
                                         <li><input type="radio" value="C" /><label for="C">fcm copy fcm:jules.x_tr@vn#.# or fcm copy https://code.metoffice.gov.uk/svn/jules/main/trunk@vn#.#</label><br/></li>                                                                                <li><input type="radio" value="D" /><label for="D">fcm get fcm:jules.x_tr@vn#.# or fcm get https://code.metoffice.gov.uk/svn/jules/main/trunk@vn#.#</label><br/></li>
@@ -461,7 +451,7 @@
                                 </div>
                             </li>
                             <li>                                <p class="question">Who can see my changes to JULES code?</p>
-                                <div id="31" class="questions">
+                                <div id="30" class="questions">
                                     
                          <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Everyone</label><br/></li>
@@ -473,49 +463,9 @@
                                     <p class="answers E"><em>E</em></p>
                                 </div>
                             </li>
-                            <li>                                
-                                <p class="question">What does KGO mean?
-</p>
-                                <div id="32" class="questions">
-                                    <ol type="A">
-                                        <li><input type="radio" value="A" /><label for="A">Known Good Output</label><br/></li>
-                                        <li><input type="radio" value="B" /><label for="B">Kept Good Output</label><br/></li>
-                                        <li><input type="radio" value="C" /><label for="C">Kept Good Origin</label><br/></li>
-                                        <li><input type="radio" value="D" /><label for="D">Kept Good Origin</label><br/></li>
-                                    </ol>
-                                    <p class="answers A"><em>A</em></p>
-                                </div>
-                            </li>
-                            <li>
-                                <p class="question">Who can commit to the trunk of the JULES code?
-</p>
-                                <div id="33" class="questions">
-                                    <ol type="A">
-                                        <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
-                                        <li><input type="radio" value="B" /><label for="B">Anyone with a MOSRS account</label><br/></li>
-                                        <li><input type="radio" value="C" /><label for="C">Anyone with a JULES MOSRS account</label><br/></li>
-                                        <li><input type="radio" value="D" /><label for="D">Only the branch owner of the branch that they want to commit to the trunk</label><br/></li>
-                                        <li><input type="radio" value="E" /><label for="E">JULES System Manager and UM Systems Team</label><br/></li>
-                                        <li><input type="radio" value="F" /><label for="F">JULES System Manager only</label><br/></li>
-                                    </ol>
-                                    <p class="answers E"><em>E</em></p>
-                                </div>                            </li>
-                            <li>                                                                <p class="question">Who can commit to the branch of the JULES code?
-</p>
-                                <div id="34" class="questions">
-                                    <ol type="A">
-                                        <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
-                                        <li><input type="radio" value="B" /><label for="B">Anyone with a MOSRS account</label><br/></li>
-                                        <li><input type="radio" value="C" /><label for="C">Anyone with a JULES MOSRS account</label><br/></li>
-                                        <li><input type="radio" value="D" /><label for="D">Only the branch owner of the branch that they want to commit to the trunk</label><br/></li>
-                                        <li><input type="radio" value="E" /><label for="E">JULES System Manager and UM Systems Team</label><br/></li>
-                                        <li><input type="radio" value="F" /><label for="F">JULES System Manager only</label><br/></li>
-                                    </ol>
-                                    <p class="answers D"><em>D</em></p>
-                                </div>                            </li>
                             <li>                                                                <p class="question">Who can commit to a JULES-Rose suite on rosie u repository?
 </p>
-                                <div id="35" class="questions">
+                                <div id="31" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">Anyone with a JULES MOSRS account</label><br/></li>
@@ -528,7 +478,7 @@
                                 </div>                            </li>
                             <li>                                                                <p class="question">Who can commit to a JULES-Rose suite branch on rosie u repository?
 </p>
-                                <div id="36" class="questions">
+                                <div id="32" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">Anyone</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">Anyone with a JULES MOSRS account</label><br/></li>
